# ai_real_estate_agent

./: .gitignore  README.md  react-app.js  requirements.txt  vercel.json
.claude/: settings.local.json
api/: index.py
backend/: .env.example  pyproject.toml  real_estate.db-journal  requirements-dev.txt  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/llm/: base.py  claude_provider.py  factory.py  openai_provider.py
backend/app/llm/prompts/: extraction.py  ranking.py
backend/app/models/: __init__.py  client.py  email_send.py  listing.py  pipeline_run.py  ranking.py  rejection.py  requirement.py  transcript.py
backend/app/routers/: google_auth.py  health.py  pipeline.py  rankings.py  requirements.py  review.py  search.py  send.py  transcripts.py  whatsapp.py
backend/app/schemas/: client.py  email_send.py  listing.py  pipeline.py  ranking.py  rejection.py  requirement.py  transcript.py
backend/app/services/: extraction_service.py  google_docs_service.py  pipeline_service.py  ranking_service.py  rejection_learning_service.py  review_service.py  search_service.py  send_service.py  transcript_service.py  whatsapp_service.py  zillow_client.py
backend/app/services/scrapers/: __init__.py  base_scraper.py  condos_ca_scraper.py  housesigma_scraper.py  property_ca_scraper.py  realtor_ca_scraper.py  registry.py  utils.py  zillow_scraper.py  zoocasa_scraper.py
backend/app/templates/: advisory.html  casual.html  professional.html
backend/app/utils/: exceptions.py  file_handling.py  migrations.py
backend/tests/: conftest.py  test_email_templates.py  test_extraction.py  test_file_parsing.py  test_google_docs.py  test_migrations.py  test_mls_extraction.py  test_parallel_search.py  test_ranking_service.py  test_rejection_learning.py  test_review.py  test_scoring.py  test_scrapers.py  test_whatsapp.py  test_zillow_integration.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  google.ts  pipeline.ts  rankings.ts  requirements.ts  review.ts  search.ts  send.ts  transcripts.ts  whatsapp.ts
frontend/src/components/common/: EmptyState.tsx  ErrorAlert.tsx  LoadingSpinner.tsx  StatusBadge.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/pipeline/: PipelineProgress.tsx
frontend/src/components/requirements/: ConfidenceBadge.tsx
frontend/src/pages/: DashboardPage.tsx  GoogleCallbackPage.tsx  PipelineDetailPage.tsx  RankingsPage.tsx  RequirementsPage.tsx  ReviewPage.tsx  SearchResultsPage.tsx  SendPage.tsx  TranscriptDetailPage.tsx  UploadTranscriptPage.tsx  WhatsAppPage.tsx
frontend/src/types/: listing.ts  pipeline.ts  requirement.ts  transcript.ts
specs/: 001_spec.md
